# dim

./: .IGNORE-gitlab-ci.yml  .dockerignore  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .mailmap  .rgignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  ROADMAP.md  Rocket.toml  SECURITY.md  config.json  deny.toml  diesel.toml  docker-compose-template.yaml  docker-compose-template.yml  docker-compose.yml  expanded.rs  ffmpeg.sh  manifest.mpd  openflix.sqlite  rust-toolchain  rustfmt.toml  start.sh
auth/: Cargo.toml
auth/src/: lib.rs
database/: .env  Cargo.toml  sqlx-data.json
database/migrations/: 20210619211347_dim.sql  20220512200302_add-userid.sql  20220512210542_master-changes.sql  20220522211659_remove_auto_incr_not_null_constraints.sql  20220924000853_propagate-delete-assets.sql
database/src/: asset.rs  auth.rs  build.rs  compact_mediafile.rs  episode.rs  error.rs  genre.rs  lib.rs  library.rs  media.rs  mediafile.rs  movie.rs  progress.rs  query_ext.rs  rw_pool.rs  schema.rs  season.rs  tv.rs  unmatched.rs  user.rs  utils.rs
dim/: Cargo.toml
dim-auth/: Cargo.toml
dim-auth/src/: lib.rs
dim-core/: Cargo.toml
dim-core/benches/: movie_scanner.rs
dim-core/src/: build.rs  core.rs  errors.rs  fetcher.rs  inspect.rs  lib.rs  settings.rs  stream_tracking.rs  tree.rs  utils.rs
dim-database/: Cargo.toml  build.rs  sqlx-data.json
dim-database/.sqlx/: query-01d43bd9e19a2b5110eb7cbe30a36a59965df787984f6138d594e6636c15d654.json  query-05b4899212cef15e25398ab74e328923f1121a7de5e98ce76cae65e039e6f5d7.json  query-0d500c56ac32a5bc2132c4683709079afa2ca07fd7a6f384a0985f234e0d0103.json  query-0d7fbd4bceaf802bff9e5946abd1e5245167e47f398b5648f4daf22dc17cb574.json  query-0f6463e4556254f5a933480335b4a457391e0257cc8818a4700c1774b9d2f07e.json  query-0f8907fa453928587fe2f246771dc5a3ff763010947804b3d49d502b93722c31.json  query-10a1cd51d06ed5a147fc02ac5f60425b1d7cf17fca3bffbcad03a420b44577a0.json  query-11ea3b85f4f55bfeb3892a94b997b546c5483e9d7d56191dc8a37a0e898a223d.json  query-12938f72ae5d6a777c4e9a13daf073c3f28eb2ca54ef0670b3b4e6e84c7974b5.json  query-13f40d346605ca213493174ddb8fdce12a8777f4d4287756e8a192acd4b1139f.json  query-146216f68e5c6b8fcf700913232fabacb72712d5db19dff3a899d2f5e7deafe3.json  query-15dcac86eb0ce190689ddd0727c4655d6814a5582cd6b4a1e59c02a9330b184d.json  query-18ecab51f8a4ba8b6b60acfb40ad6ae3e0d7c95a16cba22c2f5acfdea0400131.json  query-1a31ae14ffcdae576f1fc50358e21d7978c417e4396163956ef9b602b33619cf.json  query-1aa10b45f22097f356d4aa611c2b917790faae8e3a66c8b3c1aedc5b98cd279a.json  query-1e2e66d5193dc5d33b4089bbecceca8b553d05e88c1954505b4c8f8ec17437d8.json  query-1e43c8f84d4cad2e06462a166c94a0e4266418d308a2b2e770009d98724a0c16.json  query-20d94cf1cf2bc3b643b27a75a58f0517156d112ccfba01d5f6a5785175e6a878.json  query-23f4636a827c3ac888d0702abcd29ee2cdae3747a2428d128a511e87758e01e0.json  query-27d00bff12d3fae5ddc97b1ce2079e52c5fbf5d75d19d1ceaa92d412e71fe089.json  query-28cd6c8e51004b222e474139be021ad829acc627d84b04326dd5d5b1342a1f32.json  query-2c29f800753bd5a8d7d25f9297842164bb8e7fa2304683cfca831a98b4e9c132.json  query-2c3a21ab89145ff1a1d435730f86998def0f1a1c61ac6d89fb043941e0de5000.json  query-31df85a2a689d8b912948d16bdd7cb1ecd8f3d2c240cedc49483a0ac1e5c0535.json  query-32931ee9e9fe91c36140a093c25c5705adb79f137cc1acf9ca5c98be1859016a.json  query-330d8d11b8a19ed154e4b84f7cb8014a1654aee01dd443f434631a7edabb86e6.json  query-3535d7b48ae9befe8361e717cdcb69700e4ef74f7df316f0352459d494a41c1d.json  query-356eede8766a49f8c06747cd8208debbc2f4fd2bdb9d0b3aa2694b75e2ef7991.json  query-35dc8ddf2d85b3a988ed827d0eab91c7a4765622e4ac3fa3627b901f9aadad44.json  query-394059592b2004fdd0b85cb06d2cb61eaace89518af7e4b4e3345fd14a1db7b1.json  query-3aee5429152d1713edfd93c8e2b63fd172ad2b74ff64a7cf7d102deaed46ff4f.json  query-3b68d0541cc3c5e935822dd984e7f18f93ae98b967ea7707c98da75a9246bc9c.json  query-3d443cdddb28bb34a30b7fc5a2107e5c7f88552be3ac4921ada3dff77f4319e2.json  query-40bc8f32aec66c12cfb2298569f74cca2ab093412012201863308afb86f271af.json  query-41065e4a37ebbcf5497d01deef9f4455ddc13348185af39dddb2d38f25a1db69.json  query-46425091b8be36450b5843a88aca721e09b645aa1606e37b1df32266355ac0fe.json  query-4875a00d16485c590d9d9f611a84f3b36ec81ba3d47ac725c5467b942b137f8a.json  query-4a242f43d202a72ff4086f1f1cab64fabb5c0844c4342258d664a300cbb3efa3.json  query-4fadd21a3341632aef99c826b1e81dfe6f73cf5bd3b68053ab4731d692751fa5.json  query-4fd51407e7e5993f6ef4dc8cf473cdf0fea8f816896788bfbcf11944bfe51b02.json  (+91 more)
dim-database/migrations/: 20210619211347_dim.sql  20211128155802_add-library-deletion-marker.sql  20211128194125_mediafile-metadata.sql  20220512200302_add-userid.sql  20220512210542_master-changes.sql  20220924000853_propagate-delete-assets.sql  20230403182340_add-progress-unique-index.sql
dim-database/src/: asset.rs  build.rs  compact_mediafile.rs  episode.rs  error.rs  genre.rs  lib.rs  library.rs  media.rs  mediafile.rs  movie.rs  progress.rs  query_ext.rs  rw_pool.rs  season.rs  tv.rs  user.rs  utils.rs
dim-extern-api/: Cargo.toml
dim-extern-api/src/: filename.rs  lib.rs  mock.rs
dim-web/: Cargo.toml  build.rs  help.html  search-index.js  settings.html  source-files.js
dim-web/auth/: enum.AuthError.html
dim-web/dim/: all.html  fn.setup_logging.html  index.html  sidebar-items.js
dim-web/dim_utils/: fn.codec_pretty.html  fn.lang_from_iso639.html  fn.quality_to_label.html  fn.secs_to_pretty.html  macro.balanced_or_tree.html  macro.json.html  macro.warp_unwrap.html
dim-web/dim_web/: fn.serve.html  index.html  sidebar-items.js
dim-web/events/: enum.PushEventType.html  struct.Message.html
dim-web/src/: error.rs  lib.rs  middleware.rs  tree.rs
dim-web/templates/: base.html  error.html  index.html  login.html  play.html  register.html
dim/benches/: movie_scanner.rs
dim/src/: build.rs  core.rs  errors.rs  fetcher.rs  lib.rs  logger.rs  main.rs  stream_tracking.rs  tree.rs  utils.rs  websocket.rs
src/auth/: Cargo.toml
src/database/: #library.rs#  Cargo.toml  episode.rs  library.rs  media.rs  mod.rs  (+4 more)
tmdb_api/: Cargo.toml
(+5227 files in other folders)
