[package]
name = "dim"
version = "0.3.0"
build = "src/build.rs"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[features]
default = ["sqlite"]
null_auth = ["auth/null_auth"]

# the build script usually will enable this if `yarn` is installed.
# If enabled explicitly, the build script will panic if something went wrong.
embed_ui = []
no_build = []
postgres = ["database/postgres", "diesel/postgres", "rocket_contrib/diesel_postgres_pool"]
sqlite = ["database/sqlite", "diesel/sqlite", "rocket_contrib/diesel_sqlite_pool"]

[dependencies]
# Currently pointing to master of rocket so we can get async/await
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "801e04b", default-features = false, features = ["tls"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", rev = "801e04b", default-features = false }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "801e04b", default-features = false, optional = true, features = ["json", "helmet"] }
# point to fork of tokio-diesel and rocket_cors which point to git for rocket.
tokio-diesel = { git = "https://github.com/vgarleanu/tokio-diesel" }
rocket_cors = { git = "https://github.com/vgarleanu/rocket_cors" }

# needs upsert support for sqlite which isnt released yet.
diesel = { version = "1.4.6", default-features = false, optional = true }

serde = { version = "1.0.115", default-features = false, features = ["derive", "std"] }
serde_derive = "1.0.115"
serde_json = "1.0.48"

database = { path = "./src/database", default-features = false, optional = true }
events = { path = "./src/events" }
auth = { path = "./src/auth" }
nightfall = "0.1.0"

lazy_static = "1.4.0"
walkdir = "2.3.1"
rand = "0.7.3"
clap = "2.33.0"

slog = "2.5.2"
slog-term = "2.5.0"
slog-json = "2.3.0"
slog-async = "2.5.0"

chrono = "0.4.11"
err-derive = "0.2.3"
rust-embed = "^5.9.0"
torrent-name-parser = "0.3.0"
reqwest = { version = "0.11.0", features = ["json", "default-tls"], default-features = false }
notify = "4.0.15"
cfg-if = "0.1.10"
once_cell = "1.5.2"
bytes = "1.0.1"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "0.8.2", features = ["v4"] }
tokio-tungstenite = "0.14.0"
futures = "0.3.14"
xtra = { version = "0.5.1", features = ["with-tokio-1"] }
xtra_proc = "0.1.0"
async-trait = "0.1.50"
async-recursion = "0.3.2"
anitomy = "0.1.2"

[dev-dependencies]
criterion = "0.3.4"

[build-dependencies]
fs_extra = "1.1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"
xz2 = "0.1.6"
tar = "0.4.32"

[target.'cfg(windows)'.dependencies]
zip = "0.5.10"

[profile.release]
lto = true
opt-level = 'z'

[[bench]]
name = "scanner"
harness = false
