[package]
name = "auth"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
serde = { version = "^1", features = ["derive"] }
once_cell = "1.8.0"
rand = "0.8.3"
aes-gcm = "0.9.4"
base64 = "0.13.0"
thiserror = "1.0.30"
displaydoc = "0.2.3"
