[package]
name = "database"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[features]
default = ["sqlite"]

postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
lazy_static = "^1"
slog = "^2"
ring = "^0.16.11"
base64 = "0.13.0"
uuid = { version = "0.8.1", features = ["v4"] }
cfg-if = "1.0.0"
err-derive = "0.3.0"
sqlx = { version = "^0.5.5", features = ["runtime-tokio-rustls", "offline"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
