[package]
name = "dim-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "^1", features = ["derive"] }
once_cell = "1.8.0"
rand = "0.8.3"
aes-gcm = "0.9.4"
base64 = "0.13.0"
thiserror = "1.0.30"
displaydoc = "0.2.3"
