[package]
name = "dim-web"
version = "0.1.0"
edition = "2021"

[features]
# the build script usually will enable this if `yarn` is installed.
# If enabled explicitly, the build script will panic if something went wrong.
embed_ui = []

[dependencies]
dim-database = { path = "../dim-database" }
dim-utils = { path = "../dim-utils" }
dim-events = { path = "../dim-events" }
dim-core = { path = "../dim-core" }

nightfall = { git = "https://github.com/Dusk-Labs/nightfall", tag = "0.3.12-rc4", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }

axum = { version = "0.6.20", features = ["ws", "http2", "macros", "multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
displaydoc = "0.2.3"
dominant_color = "0.3.0"
futures = "0.3.14"
fuzzy-matcher = "0.3.7"
http = "^0.2.3"
image = "0.24.3"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
rust-embed = "^5.9.0"
serde = { version = "^1.0.125", default-features = false, features = [
    "derive",
    "std",
    "rc",
] }
serde_derive = "^1.0.125"
serde_json = "^1.0.64"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
thiserror = "1.0.30"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.32"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "^0.3.10", features = [
    "fmt",
    "env-filter",
    "json",
] }
uuid = { version = "1.2.2", features = ["v4"] }
hyper = "0.14.25"
tower = { version = "0.4.13", features = ["tokio", "util"] }
dim-extern-api = { version = "0.4.0-dev", path = "../dim-extern-api" }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
