[package]
name = "dim"
version = "0.1.0"
edition = "2021"

[dependencies]
dim-core = { path = "../dim-core" }
dim-auth = { path = "../dim-auth" }
dim-database = { path = "../dim-database" }
dim-events = { path = "../dim-events" }
dim-extern-api = { path = "../dim-extern-api" }
dim-web = { path = "../dim-web" }
dim-utils = { path = "../dim-utils" }
xtra = { version = "0.5.1", features = ["tokio", "with-tokio-1"] }
fdlimit = "0.2.1"

# git dependencies
nightfall = { path = "../../nightfall", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }
tracing = "0.1.40"
tokio = { version = "1.33.0", features = ["full"] }
clap = { version = "4.4.7", features = ["derive", "env"] }

[features]
vaapi = ["nightfall/vaapi"]

# the build script usually will enable this if `yarn` is installed.
# If enabled explicitly, the build script will panic if something went wrong.
embed_ui = []
