[package]
name = "tmdb_api"
version = "0.3.0-rc6"
authors = ["Valerian G. <valerian@dusklabs.io>"]
edition = "2018"

[dependencies]
database = { path = "../database/" }

serde = { version = "^1.0.125", default-features = false, features = [
    "derive",
    "std",
] }
serde_derive = "^1.0.125"
serde_json = "^1.0.64"
err-derive = "^0.3.0"
tokio = { version = "1", features = ["rt", "signal"] }
futures = "0.3.14"
reqwest = { version = "0.11.0", features = [
    "json",
    "default-tls",
], default-features = false }
async-trait = "0.1.50"
async-recursion = "0.3.2"
lazy_static = "1.4.0"
