[package]
name = "auth"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
jsonwebtoken = "5.0.1"
time = "0.1.42"
rocket = "^0.4.6"
