[package]
name = "auth"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
null_auth = []

[dependencies]
serde = { version = "1.0.105", features = ["derive"], default-features = false }
jsonwebtoken = "5.0.1"
time = "0.1.42"
rocket = { version = "^0.4.6" }
uuid = { version = "0.8.2", features = ["v4"] }
