[package]
name = "auth"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
null_auth = []

[dependencies]
serde = { version = "^1.0.105", features = ["derive"], default-features = false }
jsonwebtoken = "7.2.0"
time = "0.1.42"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.3"
