[package]
name = "database"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[features]
default = ["sqlite"]

postgres = ["sqlx/postgres", "async-recursion"]
sqlite = ["sqlx/sqlite"]

[dependencies]
serde = { version = "^1.0.105", features = ["derive"] }
serde_derive = "^1.0.105"
lazy_static = "^1.4.0"
slog = "^2.5.2"
ring = "^0.16.11"
base64 = "0.13.0"
uuid = { version = "0.8.1", features = ["v4"] }
cfg-if = "1.0.0"
err-derive = "0.3.0"
async-trait = "0.1.50"
futures = "0.3.14"
sqlx = { version = "^0.5.5", features = ["runtime-tokio-rustls"] }
async-recursion = { version = "0.3.2", optional = true }
