[package]
name = "dim-scanners"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.3.9"
tmdb = "2.0.0"
walkdir = "2.2.9"
notify = "4.0.12"
torrent-name-parser = "0.1.3"
reqwest = "0.9.19"
serde = "1.0.98"
chrono = "0.4.7"
dim-database = { path = "../database" }
dim-streamer = { path = "../streaming" }
diesel = { version = "1.4.2", features = ["postgres"] }
