[package]
name = "dim-scanners"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3.9"
walkdir = "2.2.9"
notify = "5.0.0-pre.1"
torrent-name-parser = "0.2.0"
reqwest = "0.9.19"
serde = "1.0.98"
chrono = "0.4.7"
dim-database = { path = "../database" }
dim-streamer = { path = "../streaming" }
dim-events = { path = "../events" }
diesel = { version = "1.4.2", default-features = false, features = ["postgres"] }
slog = "2.5.2"
lazy_static = "1.4.0"
rayon = "1.2.0"
pushevent = "0.1.2"
