[package]
name = "streamer"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[dependencies]
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.41"
database = { path="../database" }
uuid = { version="0.7.4", features=["v4"] }
lazy_static = "1.4.0"
pushevent = "0.1.3"
shared_child = "0.3.4"
nix = "0.16.0"
stoppable_thread = "0.2.1"
toml = "0.5.5"
events = { path = "../events" }
slog = "2.5.2"
